--- a/style.css
+++ b/style.css
@@ -1,347 +1,534 @@
+/* RESET */
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,500,700,800&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Concert+One&display=swap');
-
-* {
+html{
+    font-size: 16px;
+    margin: 0;
+}
+/* Colors */
+:root{
+    --primary-color: #2569b6;
+    --white-color: #fff;
+    --black-color: #000;
+    --correct-color: #279627;
+    --wrong-color: #e6c612;
+}
+*,
+*::before
+*::after
+{
+    margin: 0;
+    padding: 0;
+    box-sizing: inherit;
+}
+/* BODY */
+body{
+    font-size: 62.5%;
+    font-family: 'Montserrat', sans-serif;
     box-sizing: border-box;
+    background-color: var(--black-color);
+    color: var(--white-color);
 }
-
-.custom-box{
-    max-width: 800px;
-    margin: 30px auto;
-    padding: 50px 40px;
-    border-radius: 10px;
+/* container styling */
+.container{
+    max-width: 60rem;
+    margin: 3rem auto;
+    font-size: .9rem;
 }
-
+.custom{
+    max-width: 100%;
+    border-radius: 1rem;
+}
+/* start page styling */
 .start-box{
+    background-color: #1f1c1c;
     display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 1rem;
+}
+.start-box.show{
     display: none;
+}
+.game-logo{
+    display: flex;
+    justify-content: center;
+}
+.game-logo img{
+    width: 10rem;
+    height: 10rem;
+}
+.instruction{
+    display: inline-block;
+    background-color: #666161;
+    padding: .5rem;
+    border-radius: 1rem;
+    margin-top: .5rem;
+}
+.instruction h3{
+    text-align: center;
+}
+.user-info{
+    display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: rgb(66, 61, 61);
-    box-shadow: 0px 5px 8px rgba(0, 0, 0, 0.5);
+    margin-top: .5rem;
 }
-.start-img{
-    animation: fadeInOut 2s linear infinite;
+.user-info input{
+    padding: .8rem;
+    font-size: 1.2rem;
+    border-radius: 1rem;
+    outline: none;
 }
-@keyframes fadeInOut{
-    0%{
-        opacity: 0;
-    }
-    50%{
-        opacity: 1;
-    }
-    100%{
-        opacity: 0;
-    }
+.btn{
+    padding: .8rem;
+    border: 2px solid var(--primary-color);
+    cursor: pointer;
+    border-radius: 1rem;
+    margin-top: .5rem;
+    transition: all .3s linear;
+}
+.start-game-btn:hover{
+    background-color: var(--primary-color);
+    color: var(--black-color);
 }
 
-.btn{
-    border: 2px solid gray;
-    padding: 8px 18px;
-    border-radius: 5px;
-    margin-top: 10px;
-    cursor: pointer;
+/* Main page styling */
+.game-box{
+    display: none;
+    min-height: 30rem;
+    box-shadow: 0 .3rem .5rem rgba(255, 255, 255, 0.3);
 }
-.start-btn{
-    background-color: #321746;
-    color: #fff;
-    transition:all .2s ease;
-    animation: moveRight .5s linear;
+.game-box.show{
+    display: flex;
 }
-.start-btn:hover{
-    opacity: 0.4;
+.game-box .game{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 80%;
+    background-image: url("img/background.jpg");
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    border-top-left-radius: 1rem;
+    border-bottom-left-radius: 1rem;
+    border: 1px solid red;
 }
-@keyframes moveRight{
+.game-box .current-question-amount{
+    margin-top: 1rem;
+    font-size: 1.5rem;
+    display: none;
+}
+/* Timer styling */
+.game-box .game .timer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    left: 0;
+    top: 0;
+    margin-top: 1rem;
+    margin-left: 1rem;
+    width: 6rem;
+    height: 6rem;
+    text-align: center;
+    font-size: 2.8rem;
+    font-weight: 800;
+    border-radius: 50%;
+    border: 2px solid green;
+    color: green;
+    transition: all .1s linear;
+}
+.game-box .game .timer.less-time{
+    border: 2px solid red;
+    color: red;
+}
+/* life line display box */
+.game-box .game .life-line-display-box{
+    position: absolute;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    bottom: 0;
+    margin-bottom: 16.5rem;
+    width: 15rem;
+    height: 10rem;
+    background-color: var(--black-color);
+    transition: all .3s linear;
+    animation: moveDown 1s linear;
+}
+@keyframes moveDown{
     0%{
         opacity: 0;
-        transform: translateY(40px);
+        transform: translateY(-20rem);
+    }
+    100%{
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+.game-box .game .life-line-display-box.show{
+    display: flex;
+}
+.game-box .game .life-line-display-box .amount-won{
+    display: none;
+    color: var(--wrong-color);
+}
+.game-box .game .life-line-display-box .amount-won.show{
+    display: block;
+}
+.life-line-display-box .call{
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.life-line-display-box .call.show{
+    display: flex;
+}
+.life-line-display-box .call img{
+    width: 5rem;
+    height: 5rem;
+    transition: all .3s linear;
+    animation: pulse 1s linear infinite;
+}
+.life-line-display-box .call .call-answer{
+    text-align: center;
+}
+@keyframes pulse{
+    0%{
+        opacity: 0;
+    }
+    100%{
+        opacity: 1;
+    }
+}
+.au-cover{
+    display: none;
+    flex-direction: column;
+    width: 100%;
+}
+.au-cover.show{
+    display: block;
+}
+.au-cover .alpha{
+    letter-spacing: 3rem;
+    padding-left: 1.5rem;
+    color: var(--wrong-color);
+}
+.au-container{
+    display: flex;
+    background-color: #000;
+}
+.au-container.show{
+    display: flex;
+    transition: all .3s;
+    animation: moveDown 1s linear;
+}
+@keyframes moveDown{
+    0%{
+        opacity: 0;
+        transform: translateY(-200px);
     }
     100%{
         opacity: 1;
         transform: translateY(0px);
     }
 }
-
-
-.game-box{
+.au-box{
+    width: 4rem;
+    height: 7rem;
+    border: 1px solid #fff;
     display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
+    justify-content: center;
     align-items: center;
-    background-image: url("img/background.jpg");
-    background-size: contain;
-    min-height: 500px;
-    color: #fff;
     position: relative;
+    transition: all .3s;
+    cursor: pointer;
 }
-.game-box .lifeTimer-box{
+.bx{
     position: absolute;
-    top: 0;
     left: 0;
-    margin-top: 20px;
-    margin-left: 30px;
-}
-.game-box .lifeTimer-box .life-line{
-    border: 1px solid gold;
-    color: gold;
-    padding: 5px 10px;
-    border-radius: 8px;
-    cursor: pointer;
-    transition: all .2s;
-    text-transform: capitalize;
-}
-.game-box .lifeTimer-box .life-line:hover{
-    color: #000;
-    background-color: gold;
-}
-.game-box .lifeTimer-box .timer{
-    margin-top: 10px;
-    width: 70px;
-    height: 70px;
-    line-height: 60px;
-    text-align: center;
-    font-size: 30px;
-    font-weight: 800;
-    border-radius: 50%;
-    border: 2px solid green;
-}
-.game-box .life-display-box{
-    width: 200px;
-    background-color: #000;
-    color: #fff;
-    margin-bottom: 20px;
-}
-.game-box .life-display-box .ask-box{
-    display: flex;
-    justify-content: center;
-    padding: 10px 0;
-    /* display: none; */
-}
-.game-box .life-display-box .ask-box .optionAu{
-    width:30px;
-    height: 80px;
-    border: 1px solid gold;
-    line-height: 80px;
-    text-align: center;
-    position: relative;
-    color: #fff;
-}
-.game-box .life-display-box .ask-box .optionAu:not(:last-child){
-    margin-right: 3px;
-}
-.game-box .life-display-box .ask-box .optionAu .a{
-    width: 100%;
-    height: 70%;
-    background-color: gold;
-    opacity: 0.5;
-    position: absolute;
     bottom: 0;
-    z-index: 1;
-}
-.game-box .life-display-box .ask-box .optionAu .b{
     width: 100%;
-    height: 10%;
     background-color: gold;
-    opacity: 0.5;
-    position: absolute;
-    bottom: 0;
+    opacity: 0.7;
+    transition: all .3s;
 }
-.game-box .life-display-box .ask-box .optionAu .c{
-    width: 100%;
-    height: 8%;
-    background-color: gold;
-    opacity: 0.5;
-    position: absolute;
-    bottom: 0;
+.au-box:not(:last-child){
+    margin-right: 5px;
 }
-.game-box .life-display-box .ask-box .optionAu .d{
-    width: 100%;
-    height: 12%;
-    background-color: gold;
-    opacity: 0.5;
-    position: absolute;
-    bottom: 0;
-}
-.game-box .life-display-box .call-box{
-    text-align: center;
-    margin-top: 10px;
-    padding: 10px 0;
-    display: none;
-}
-.game-box .life-display-box .call-box .call{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.game-box .life-display-box .call-box .call img{
-    width:50px;
-    height: 50px;
-}
-.game-box .life-display-box .call-box .call .loading-dots > div{
-    width: 8px;
-    height: 8px;
-    background-color: #fff;
-    border-radius: 50%;
-    display: inline-block;
-    animation: load 1.5s ease-in-out infinite both;
-}
-.game-box .life-display-box .call-box .call .loading-dots .dot1{
-    animation-delay: -0.30s;
-}
-.game-box .life-display-box .call-box .call .loading-dots .dot1{
-    animation-delay: -0.15s;
-}
-.game-box .life-display-box .call-box .call .loading-dots .dot1{
-    animation-delay: -0.30s;
-}
-@keyframes load{
-    0%, 80%, 100%{
-        transform: scale(0);
-    }
-    40%{
-        transform: scale(1);
-    }
-}
-.game-box .question-help{
+/* Question styling */
+.game-box .game .question-box{
     position: absolute;
     display: flex;
     flex-direction: column;
-    width: 0px;
-    height: 100%;
-    z-index: 1;
-    top: 0;
-    right: 0;
-    padding-top: 20px;
-    background-color: #000;
-    border-top-right-radius: 10px;
-    border-bottom-right-radius: 10px;
-    overflow-x: hidden;
-    transition: .5s;
-}
-.game-box .question-help.show{
-    width: 250px;
-}
-.game-box .question-help .closebtn {
-    font-size: 30px;
-    text-decoration: none;
-    color: #fff;
-    margin-left: 10px;
-  }
-.game-box .question-help .help{
-    display: flex;
-    justify-content: center;
-}
-.game-box .question-help > div{
-    margin-right: 10px;
-}
-.fify50,
-.callAFriend,
-.askTheAudience{
-    width: 60px;
-    height: 60px;
-    line-height: 60px;
-    text-align: center;
-    background-color: #000;
-    border-radius: 50%;
-    cursor: pointer;
-    position: relative;
-    display: flex;
-    justify-content: center;
     align-items: center;
-}
-.fify50{
-    background-image: url("img/fifty50.png");
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
-}
-.fify50::after{
-    content: "";
-    background: url("img/cancel.png");
-    background-size: 100% 100%;
-    display: block;
-    position: absolute;
-    top: 0;
-    width: 50px; 
-    height: 50px; 
-}
-.callAFriend::after{
-    content: "";
-    background: url("img/cancel.png");
-    background-size: 100% 100%;
-    display: block;
-    position: absolute;
-    top: 0;
-    width: 50px; 
-    height: 50px; 
-}
-.askTheAudience::after{
-    content: "";
-    background: url("img/cancel.png");
-    background-size: 100% 100%;
-    display: block;
-    position: absolute;
-    top: 0;
-    width: 50px; 
-    height: 50px; 
-}
-.callAFriend{
-    background-image: url("img/phone.png");
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
-}
-.askTheAudience{
-    background-image: url("img/ask.png");
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
-}
-.game-box .question-help .prices{
-    align-self: center;
-}
-.game-box .question-help .prices ul{
-    list-style: none;
-    font-weight: 400;
-    font-size: 20px;
-}
-.game-box .question-help .prices ul li{
-    color: gold;
-}
-.game-box .question-help .prices ul li:nth-child(1),
-.game-box .question-help .prices ul li:nth-child(5),
-.game-box .question-help .prices ul li:nth-child(11){
-    color: #fff;
-}
-.question-box {
-    background-color: #000;
     width: 80%;
-    text-align: center;
-    padding: 14px 10px;
-    border: 2px solid #3689e7;
-    border-radius: 30px;
+    bottom: 0;
 }
-
-.game-box .options{
+.game-box .game .question-box .question{
+    position: relative;
+    background-color: #000;
+    width: 100%;
+    box-sizing: border-box;
+    text-align: center;
+    padding: 1.2rem 1rem;
+    border: 2px solid #3689e7;
+    border-radius: 3rem;
+    opacity: 0;
+}
+.game-box .game .question-box .question .question-number{
+    position: absolute;
+    display: none;
+    top: -1.2rem;
+    left: -1rem;
+    background-color: var(--black-color);
+    border: 2px solid #3689e7;
+    padding: .5rem;
+    border-radius: 50%;
+}
+.game-box .game .question-box .question.show{
+    animation: zoomInOut .3s linear forwards;
+}
+@keyframes zoomInOut{
+    0%{
+        opacity: 0;
+        transform: scale(3);
+    }
+    100%{
+        transform: scale(1);
+        opacity: 1;
+    }
+}
+.game-box .game .question-box .option-box{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    width: 80%;
+    width: 100%;
     font-weight: 400;
+    padding-bottom: 1rem;
 }
-
-.game-box .options .option{
-
-        background-color: #000;
-        flex-basis: calc(50% - 20px);
-        max-width: calc(50% - 20px);
-        margin-top: 5px;
-        padding: 14px 5px;
-        font-size: 16px;
-        text-transform: capitalize;
-        font-weight: 400;
-        color: #fff;
-        border: 2px solid #3689e7;
-        border-radius: 30px;
-        cursor: pointer;
+.game-box .game .question-box .option-box .option{
+    background-color: #000;
+    flex-basis: calc(50% - 2rem);
+    max-width: calc(50% - 2rem);
+    margin-top: 5px;
+    padding: 14px 5px;
+    font-size: inherit;
+    text-transform: capitalize;
+    font-weight: 400;
+    color: #fff;
+    border: 2px solid #3689e7;
+    border-radius: 3rem;
+    cursor: pointer;
+    opacity: 0; 
 }
-.game-box .options .option span{
+.game-box .game .question-box .option-box .option .span-o{
     color: gold;
+}
+.game-box .game .question-box .option-box .option .opt{
+    color: #fff;
+}
+.game-box .game .option-box .option:nth-child(1).show-1,
+.game-box .game .option-box .option:nth-child(2).show-1{
+    animation: zoomInOut .3s linear forwards;
+    animation-delay: .5s;
+}
+.game-box .game .option-box .option:nth-child(3).show-2,
+.game-box .game .option-box .option:nth-child(4).show-2{
+    animation: zoomInOut .3s linear forwards;
+    animation-delay: 1s;
+}
+.game-box .game .question-box .option-box .option.already-answered{
+    pointer-events: none;
+}
+.game-box .game .question-box .option-box .option.show-correct{
+    background-color: #11c466;
+    border-color: #059e4c;
+    color: #fff;
+    transition: all .3s ease;
+}
+.game-box .game .question-box .option-box .option.correct{
+    background-color: var(--correct-color);
+    border-color: var(--correct-color);
+    color: #fff;
+    opacity: 1;
+}
+.game-box .game .question-box .option-box .option.wrong{
+    background-color: var(--wrong-color);
+    border-color: var(--wrong-color);
+    color: #fff;
+    opacity: 1;
+}
+.next-question{
+    padding-bottom: 1rem;
+}
+.next-question-btn{
+    outline: none;
+    border: none;
+    border: 2px solid #3689e7;
+    background-color: #000;
+    color: #fff;
+    display: none;
+    animation: fromRight 1s linear forwards;
+}
+.next-question-btn.show{
+    display: inline-block;
+}
+.playAgain-btn{
+    outline: none;
+    border: none;
+    border: 2px solid #3689e7;
+    background-color: #000;
+    color: #fff;
+    display: none;
+    animation: fromRight 1s linear forwards;
+}
+.playAgain-btn.show{
+    display: inline-block;
+}
+@keyframes fromRight{
+    0%{
+        transform: translateX(300px);
+    }
+    100%{
+        transform: translateX(0px);
+    }
+}
+
+/* Side Styling */
+.game-box .side{
+    width: 20%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 1rem;
+}
+.game-box .side .life-lines{
+    display: flex;
+    justify-content: space-evenly;
+    background-color: var(--black-color);
+    width: 100%;
+}
+.game-box .side .life-lines .fify50,
+.game-box .side .life-lines .callAFriend,
+.game-box .side .life-lines .askTheAudience
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    background-size: 100% 100%;
+    height: 4rem;
+    width: 4rem;
+    cursor: pointer;
+    border-radius: 50%;
+}
+.game-box .side .life-lines .fify50{
+    background-image: url("img/fifty50.png");
+}
+.game-box .side .life-lines .callAFriend{
+    background-image: url("img/phone.png");
+}
+.game-box .side .life-lines .askTheAudience{
+    background-image: url("img/ask.png");
+}
+.fify50 .cancel,
+.callAFriend .cancel,
+.askTheAudience .cancel
+{
+    background: url("img/cancel.png");
+    background-size: 100% 100%;
+    display: none;
+    position: absolute;
+    width: 3rem; 
+    height: 3rem; 
+}
+.fify50 .cancel.show,
+.callAFriend .cancel.show,
+.askTheAudience .cancel.show
+{
+    display: flex;
+}
+.game-box .side .price-box{
+    margin-top: 2rem;
+}
+.game-box .side .price-box .prices{
+    list-style-position: inside;
+    margin-left: 0;
+}
+.game-box .side .price-box .prices li::marker{
+    background-color: red;
+}
+.game-box .side .price-box .prices li{
+    padding: 0 .5rem;
+    text-indent: -.1rem;
+}
+.game-box .side .price-box .prices span{
+    color: var(--wrong-color);
+    margin: 0 .3rem;
+}
+.game-box .side .price-box .prices li{
+    color: gold;
+}
+.game-box .side .price-box .prices li:nth-child(1),
+.game-box .side .price-box .prices li:nth-child(11),
+.game-box .side .price-box .prices li:nth-child(6)
+{
+    color: #fff;
+}
+
+/* ----- MEDIA QUIERES --------*/
+
+@media only screen and (max-width: 920px){
+
+    .container {
+        width: 100%;
+        margin: 0;
+        padding: 0;
+        height: 100vh;
+    }
+    .container .custom{
+        width: 100%;
+        height: 100vh;
+        margin: 0;
+        border-radius: 0;
+    }
+    .game-box{
+        display: none;
+        width: 100%;
+        height: 100%;
+        box-shadow: none;
+    }
+    .game-box.show{
+        display: flex;
+        flex-direction: column;
+    }
+    .game-box .game{
+        width: 100%;
+        height: 90%;
+        margin: 0;
+        order: 2;
+        border-radius: 0;
+        border: 1px solid var(--white-color);
+        border-top: none;
+    }
+    .game-box .side{
+        width:100%;
+        height: 10%;
+        margin: 0;
+        order: 1;
+        padding: 0;
+        border: 1px solid var(--white-color);
+    }
+    .price-box .prices{
+        display: none;
+    }
+    .game-box .game .question-box .question .question-number,
+    .game-box .current-question-amount
+    {
+        display: block;
+    }
 }
